update switch case syntax

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ console.log(typeof NaN)
             <hr>
             <h3>@ Switch case</h3>
             const day = 1;
-            switch (3) {
+            switch (day) {
             case 1:
             console.log("Monday")
             break;
